<resources>
    <string name="app_name">BodegaUbita</string>
    <string name="title_store">Tienda</string>
    <string name="title_explore">Explorar</string>
    <string name="title_cart">Carrito</string>
    <string name="title_fav">Favoritos</string>
    <string name="title_account">Cuenta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_explore_exclusive_offers">Ofertas Exclusivas</string>
    <string name="activity_product_detail_product_description">Descripción del producto</string>
    <string name="activity_product_detail_add_cart">Agregar al carrito</string>
    <string name="fragment_cart_title">Mi Carrito</string>
    <string name="fragment_cart_checkout">Ordenar</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="activity_login_login">Ingresar</string>
    <string name="activity_login_password">Contraseña</string>
    <string name="activity_login_email">Email</string>
    <string name="activity_login_register">Registrate</string>
    <string name="activity_login_has_account">No tienes una cuenta?</string>
    <string name="activity_register_register">Registrarse</string>
    <string name="activity_register_has_account">ya tienes una cuenta?</string>
    <string name="activity_register_login">Ingresa</string>
    <string name="activity_register_name">Nombre</string>
    <string name="activity_register_subtitle">Ingresa tus credenciales para continuar</string>
    <string name="activity_register_title">Registrarse</string>
    <string name="activity_register_address">Dirección</string>
    <string name="fragment_account_orders">Ordenes</string>
    <string name="fragment_account_profile">Mi Perfil</string>
    <string name="fragment_account_payment">Métodos de pago</string>
    <string name="fragment_account_about">Acerca</string>
    <string name="fragment_account_logout">Salir</string>
    <string name="fragment_explore_categories">Categorias</string>
    <string name="fragment_favorite_favorites">Favoritos</string>
    <string name="fragment_favorite_addAll">Agregar todo al carrito</string>
    <string name="fragment_orders_title">Mis Ordenes</string>
    <string name="item_order_orderId">Código de Orden:</string>
    <string name="item_order_status">Estado:</string>
    <string name="activity_orders_back">Regresar</string>
    <string name="fragment_category_admin_add">Agregar Categoria</string>
    <string name="fragment_product_admin_add">Agregar Producto</string>
    <string name="activity_about_title">Desarrollo de Aplicaciones Móviles I</string>
    <string name="activity_about_member1">Ramirez Mallqui Ricardo</string>
    <string name="activity_about_member2">Carbajal de la Cruz Juan</string>
    <string name="activity_about_back">Regresar</string>
</resources>