<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_store"
        android:icon="@drawable/icon_nav_store"
        android:title="@string/title_store" />

    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/icon_nav_explore"
        android:title="@string/title_explore" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/icon_nav_cart"
        android:title="@string/title_cart" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/icon_nav_fav"
        android:title="@string/title_fav" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/icon_nav_user"
        android:title="@string/title_account" />
</menu>