<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.AccountFragment">


    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/text_title"
        android:text="Nombre de Usuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:textSize="12sp"
        android:textColor="@color/text_description"
        android:text="correo@electronico.com"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUserName" />

    <View
        android:id="@+id/dvGeneral"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="32dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clOrders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/dvGeneral">

        <ImageView
            android:id="@+id/tvOrdersIcon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginVertical="16dp"
            android:src="@drawable/icon_orders"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/dvOrders"
            app:layout_constraintTop_toTopOf="@+id/clOrders" />

        <TextView
            android:id="@+id/tvOrders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/fragment_account_orders"
            app:layout_constraintBottom_toBottomOf="@+id/tvOrdersIcon"
            app:layout_constraintStart_toEndOf="@+id/tvOrdersIcon"
            app:layout_constraintTop_toTopOf="@+id/tvOrdersIcon" />

        <ImageView
            android:id="@+id/tvOrdersArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_forward_arrow"
            app:layout_constraintBottom_toBottomOf="@+id/tvOrdersIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvOrdersIcon" />

        <View
            android:id="@+id/dvOrders"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/clOrders">

        <ImageView
            android:id="@+id/ivProfileIcon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginVertical="16dp"
            android:src="@drawable/icon_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/dvProfile"
            app:layout_constraintTop_toTopOf="@+id/clProfile" />

        <TextView
            android:id="@+id/tvProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/fragment_account_profile"
            app:layout_constraintBottom_toBottomOf="@+id/ivProfileIcon"
            app:layout_constraintStart_toEndOf="@+id/ivProfileIcon"
            app:layout_constraintTop_toTopOf="@+id/ivProfileIcon" />

        <ImageView
            android:id="@+id/tvProfileArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_forward_arrow"
            app:layout_constraintBottom_toBottomOf="@+id/ivProfileIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ivProfileIcon" />

        <View
            android:id="@+id/dvProfile"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clPayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/clProfile">

        <ImageView
            android:id="@+id/ivPaymentIcon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginVertical="16dp"
            android:src="@drawable/icon_payment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/dvPayment"
            app:layout_constraintTop_toTopOf="@+id/clPayment" />

        <TextView
            android:id="@+id/tvPayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/fragment_account_payment"
            app:layout_constraintBottom_toBottomOf="@+id/ivPaymentIcon"
            app:layout_constraintStart_toEndOf="@+id/ivPaymentIcon"
            app:layout_constraintTop_toTopOf="@+id/ivPaymentIcon" />

        <ImageView
            android:id="@+id/tvPaymentArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_forward_arrow"
            app:layout_constraintBottom_toBottomOf="@+id/ivPaymentIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ivPaymentIcon" />

        <View
            android:id="@+id/dvPayment"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/clPayment">

        <ImageView
            android:id="@+id/ivAboutIcon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginVertical="16dp"
            android:src="@drawable/icon_about"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/dvAbout"
            app:layout_constraintTop_toTopOf="@+id/clAbout" />

        <TextView
            android:id="@+id/tvAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/fragment_account_about"
            app:layout_constraintBottom_toBottomOf="@+id/ivAboutIcon"
            app:layout_constraintStart_toEndOf="@+id/ivAboutIcon"
            app:layout_constraintTop_toTopOf="@+id/ivAboutIcon" />

        <ImageView
            android:id="@+id/tvAboutArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_forward_arrow"
            app:layout_constraintBottom_toBottomOf="@+id/ivAboutIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ivAboutIcon" />

        <View
            android:id="@+id/dvAbout"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:padding="20dp"
        android:backgroundTint="#f2f3f2"
        android:textColor="@color/primary"
        android:textStyle="bold"
        android:text="@string/fragment_account_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clAbout" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="24dp"
        android:elevation="8dp"
        android:src="@drawable/icon_logout"
        app:layout_constraintBottom_toBottomOf="@+id/btnLogout"
        app:layout_constraintStart_toStartOf="@+id/btnLogout"
        app:layout_constraintTop_toTopOf="@+id/btnLogout" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>